product_docs/docs/edb-postgres-ai/1.2/hybrid-manager/ai-factory/index.mdx
---
title: AI Factory in Hybrid Manager
navTitle: AI Factory in Hybrid Manager
description: Learn how to use the AI Factory workload within Hybrid Manager (Hybrid Manager AI Factory), including Gen AI, model serving, vector search, and knowledge bases. Explore learning paths, use cases, and Hybrid Manager-specific capabilities.
---

The **AI Factory workload** in Hybrid Manager brings scalable AI, machine learning, and Gen AI capabilities to your Hybrid Manager platform. It enables you to operationalize AI across your Hybrid Manager-managed clusters and data — with deep integration across Postgres, vector search, model serving, and AI assistants.

With AI Factory in Hybrid Manager, you can:

-   **Deploy Gen AI assistants and agents** for internal or external-facing use
-   **Serve AI models at scale** with integrated KServe-powered inferencing and GPU acceleration
-   **Create Knowledge Bases** and perform **Retrieval-Augmented Generation (RAG)** with vector search
-   **Manage your model library** and deploy trusted models under Hybrid Manager governance
-   **Integrate AI features** directly into your applications and data pipelines

For in-depth architecture and core concepts, see the [AI Factory Hub](../ai-factory/).

* * *

## Example AI Solutions You Can Build

AI Factory in Hybrid Manager enables solutions across many domains:

-   **Enterprise search and knowledge assistants**
    Build RAG-based assistants that integrate with corporate documents, databases, and intranet content.

-   **Customer support chatbots**
    Deploy assistants powered by your own data and domain-specific models, combining conversational AI with Knowledge Bases.

-   **AI-driven data apps**
    Expose AI-powered endpoints for apps — semantic search, recommendations, similarity search, or natural language querying.

-   **Operational AI for internal tools**
    Build AI agents and tools to assist with DevOps, customer success, HR automation, sales enablement, and more.

-   **Domain-specific model serving**
    Serve proprietary or fine-tuned models (LLMs, embedding models, ranking models) as scalable inference services within your Hybrid Manager cluster.

You can start small — with a single assistant or model endpoint — and scale to full AI-powered applications using the AI Factory architecture.

* * *

## Learning Paths

Follow structured learning paths to master AI Factory in Hybrid Manager:

-   [AI Factory 101](/edb-postgres-ai/current/ai-factory/learn/paths/101/) — Introductory concepts and usage
-   [AI Factory 201](/edb-postgres-ai/current/ai-factory/learn/paths/201/) — Building and managing Gen AI and AI Factory workloads
-   [AI Factory 301](/edb-postgres-ai/current/ai-factory/learn/paths/301/) — Advanced integration, scaling, governance, and optimization

* * *

## Use Cases and Solutions

We provide detailed guidance and patterns to help you build solutions with AI Factory:

-   [Common Use Cases](/edb-postgres-ai/current/ai-factory/learn/use-cases/) — Proven patterns for AI Factory-powered applications
-   [Industry Solutions](/edb-postgres-ai/current/ai-factory/learn/solutions/) — Industry-specific examples and best practices

* * *

## AI Factory in Hybrid Manager Workloads

Hybrid Manager supports a full set of AI Factory capabilities, tightly integrated into its control plane:

### Gen AI Workloads

-   [Gen AI Overview in Hybrid Manager](./gen-ai/) — Gen AI capabilities in Hybrid Manager
-   [Agent Studio](./gen-ai/agent-studio.mdx) — Create and manage assistants, tools, structures, and rulesets
-   [Gen AI Builder](./gen-ai/builder.mdx) — Manage Knowledge Bases and Data Lakes

### Model Management and Serving

-   [Model Library](/edb-postgres-ai/current/ai-factory/model/library/) — Manage and govern your model assets
-   [Model Serving](/edb-postgres-ai/current/ai-factory/model/serving/) — Deploy and scale model inference services on Kubernetes
-   [GPU Resource Management](./model/gpu.mdx) — Configure and allocate GPU capacity for serving

### Vector Engine

-   [Vector Engine](../../ai-factory/vector-engine/) — Integrated vector search and similarity capabilities with Postgres

* * *

## Hybrid Manager Learn Content

In addition to AI Factory content in the Hub, Hybrid Manager provides additional Learn content for Hybrid Manager-specific usage:

-   [AI Factory Concepts in Hybrid Manager](../../ai-factory/learn/explained/ai-factory-concepts.mdx)
-   [How-To Guides for Hybrid Manager AI Factory](./learn/how-to/)
-   [Learning Paths in Hybrid Manager](./learn/paths/)

* * *

## Get Started

To begin building with AI Factory in Hybrid Manager:

-   Follow the [AI Factory learning paths](./learn/paths/)
-   Explore [use cases](../../ai-factory/learn/use-cases.mdx) and [industry solutions](../../ai-factory/learn/solutions.mdx)
-   Read Hybrid Manager-specific [how-to guides](./learn/how-to/)
-   Deploy your first Gen AI assistant or model using [Agent Studio](./gen-ai/agent-studio.mdx) or [Model Serving](./model/serving.mdx)

AI Factory in Hybrid Manager gives you a scalable, secure platform to operationalize AI across your hybrid data estate. Start building today.

* * *
