product_docs/docs/edb-postgres-ai/1.3/hybrid-manager/ai-factory/index.mdx
---
title: AI Factory in Hybrid Manager
navTitle: AI Factory in Hybrid Manager
description: Learn how to use the AI Factory workload within Hybrid Manager (Hybrid Manager AI Factory), including Gen AI, model serving, vector search, and knowledge bases. Explore learning paths, use cases, and Hybrid Manager-specific capabilities.
redirects:
- /purl/hm/ai-factory
navigation:
  - "#Start here"
  - gen-ai
  - model
  - learnw
  - "#Enablement"
  - /ai-factory/
---

The **AI Factory workload** in Hybrid Manager brings scalable AI, machine learning, and Gen AI capabilities to your Hybrid Manager platform. It enables you to operationalize AI across your Hybrid Manager–managed clusters and data — with deep integration across Postgres, vector search, model serving, and AI assistants.

With AI Factory in Hybrid Manager, you can:

-   Deploy Gen AI assistants and agents for internal or external-facing use
-   Serve AI models at scale with integrated KServe-powered inferencing and GPU acceleration
-   Create Knowledge Bases and perform Retrieval-Augmented Generation (RAG) with vector search
-   Manage your model library and deploy trusted models under Hybrid Manager governance
-   Integrate AI features directly into your applications and data pipelines

For in-depth architecture and core concepts, see the [AI Factory Hub](/edb-postgres-ai/1.3/ai-factory/).

* * *

## Example AI solutions you can build

AI Factory in Hybrid Manager enables solutions across many domains:

-   Enterprise search and knowledge assistants
    Build RAG-based assistants that integrate with corporate documents, databases, and intranet content.

-   Customer support chatbots
    Deploy assistants powered by your own data and domain-specific models, combining conversational AI with Knowledge Bases.

-   AI-driven data apps
    Expose AI-powered endpoints for apps — semantic search, recommendations, similarity search, or natural language querying.

-   Operational AI for internal tools
    Build AI agents and tools to assist with DevOps, customer success, HR automation, sales enablement, and more.

-   Domain-specific model serving
    Serve proprietary or fine-tuned models (LLMs, embedding models, ranking models) as scalable inference services within your Hybrid Manager cluster.

You can start small — with a single assistant or model endpoint — and scale to full AI-powered applications using the AI Factory architecture.

* * *

## Learning paths

Follow structured learning paths to master AI Factory in Hybrid Manager:

-   [AI Factory 101](/edb-postgres-ai/1.3/ai-factory/learn/101) — Introductory concepts and usage
-   [AI Factory 201](/edb-postgres-ai/1.3/ai-factory/learn/201) — Building and managing Gen AI and AI Factory workloads
-   [AI Factory 301](/edb-postgres-ai/1.3/ai-factory/learn/301) — Advanced integration, scaling, governance, and optimization

* * *

## Use cases and solutions

We provide detailed guidance and patterns to help you build solutions with AI Factory:

-   [Common Use Cases](/edb-postgres-ai/1.3/ai-factory/learn/use-cases) — Proven patterns for AI Factory–powered applications
-   [Industry Solutions](/edb-postgres-ai/1.3/ai-factory/learn/solutions) — Industry-specific examples and best practices

* * *

## AI Factory in Hybrid Manager workloads

Hybrid Manager supports a full set of AI Factory capabilities, tightly integrated into its control plane:

### Gen AI workloads

-   [Gen AI overview in Hybrid Manager](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/gen-ai/) — Gen AI capabilities in Hybrid Manager
-   [Agent Studio](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/gen-ai/agent-studio) — Create and manage assistants, tools, structures, and rulesets
-   [Gen AI Builder](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/gen-ai/builder) — Manage Knowledge Bases and Data Lakes

### Model management and serving

-   [Model Library](/edb-postgres-ai/1.3/ai-factory/model/library) — Manage and govern your model assets
-   [Model Serving](/edb-postgres-ai/1.3/ai-factory/model/serving/) — Deploy and scale model inference services on Kubernetes
-   [GPU resource management](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/model/gpu) — Configure and allocate GPU capacity for serving

### Vector Engine

-   [Vector Engine](/edb-postgres-ai/1.3/ai-factory/vector-engine) — Integrated vector search and similarity capabilities with Postgres

* * *

## Hybrid Manager learn content

In addition to AI Factory content in the hub, Hybrid Manager provides additional Learn content for Hybrid Manager–specific usage:

-   [AI Factory concepts](/edb-postgres-ai/1.3/ai-factory/concepts)
-   [How-To Guides for Hybrid Manager AI Factory](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/learn/how-to/)
-   [Learning Paths in Hybrid Manager](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/learn/paths/)

* * *

## How AI Factory fits within Hybrid Manager

Hybrid Manager is the control plane for your databases, analytics, and AI workloads. AI Factory complements other HM capabilities:

-   Databases: Provision and manage Postgres clusters; AI Factory connects to these for vector search, RAG, and application endpoints.
-   Analytics: Offload data to Iceberg/Delta and query via SQL; AI Factory’s Pipelines and Vector Engine integrate with these datasets for retrieval.
-   Operations: Use HM observability and governance to monitor Gen AI, Pipelines, and model serving alongside databases and analytics.

Prerequisites for AI Factory in HM:

-   A Hybrid Manager project with AI Factory enabled and required entitlements for Gen AI, Pipelines, Vector Engine, and Model Serving.
-   Access to GPU resources where needed for serving. See [GPU resource management](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/model/gpu).

* * *

## Get started

To begin building with AI Factory in Hybrid Manager:

-   Follow the [AI Factory learning paths](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/learn/paths/)
-   Explore [use cases](/edb-postgres-ai/1.3/ai-factory/learn/use-cases) and [industry solutions](/edb-postgres-ai/1.3/ai-factory/learn/solutions)
-   Read Hybrid Manager–specific [how-to guides](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/learn/how-to/)
-   Deploy your first Gen AI assistant or model using [Agent Studio](/edb-postgres-ai/1.3/hybrid-manager/ai-factory/gen-ai/agent-studio) or [Model Serving](/edb-postgres-ai/1.3/ai-factory/model/serving/)

AI Factory in Hybrid Manager gives you a scalable, secure platform to operationalize AI across your hybrid data estate.

* * *



## Developer quicklinks (hub + spoke)

- Hub map: /edb-postgres-ai/1.3/ai-factory/hub-map — one screen to jump to concepts/how‑tos
- Access KServe endpoints (internal/external): /edb-postgres-ai/1.3/ai-factory/model/access-kserve-endpoints
- Python client quickstart (OpenAI‑compatible): /edb-postgres-ai/1.3/ai-factory/model/quickstart-python-client
- Inference endpoint quickstart (chat over KServe): /edb-postgres-ai/1.3/ai-factory/model/quickstart-using-inference-endpoint
- Pipelines Knowledge Bases (RAG): /edb-postgres-ai/1.3/ai-factory/pipeline/knowledge_base
- Gen AI UI quickstart (customer service): /edb-postgres-ai/1.3/ai-factory/gen-ai/quickstart-customer-service-agent-ui
- Vector Engine (vector search in Postgres): /edb-postgres-ai/1.3/ai-factory/vector-engine
- Security & governance in AI Factory: /edb-postgres-ai/1.3/ai-factory/concepts/security-governance
- Differences & FAQ (AI Factory vs. Generic AI): /edb-postgres-ai/1.3/ai-factory/concepts/differences-and-faq
